--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <br>
         Hola mijin este es mi web</br>
         simon
-        
+        <h1>como es que es asi</h1>
     </p>
 </body>
 </html>
